# mlops_project2

./: .dockerignore  .gitignore  README.md  data.py  dockerfile  model.py  pyproject.toml  train.py
